# apple-calendar-mcp

./: pyproject.toml
src/apple_calendar_mcp/: __init__.py  calendar.py  cli.py  models.py  server.py
