[project]
name = "apple-calendar-mcp"
version = "0.2.0"
description = "Apple Calendar CLI - EventKit 기반 캘린더 관리"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Allen Kim"}]
keywords = ["apple-calendar", "eventkit", "calendar", "cli"]

dependencies = [
    "pyobjc-framework-EventKit>=11.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
cal = "apple_calendar_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_calendar_mcp"]
